--- a/.github/workflows/workflowForPR.yml
+++ b/.github/workflows/workflowForPR.yml
@@ -29,5 +29,5 @@ jobs:
 
       - name: Build and Test
         working-directory: .
-        run: mvn clean install -Dspring.profiles.active=test
+        run: TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }} mvn clean install -Dspring.profiles.active=test
 
