--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -16,6 +16,9 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=local
 
+      # Telegram
+      - TELEGRAM_TOKEN=${TELEGRAM_TOKEN:12345678}
+
       # PostgreSQL
       - SERVER_POSTGRES_HOST=${SERVER_POSTGRES_HOST:-main-db}
       - SERVER_POSTGRES_PORT=5432
