--- a/.github/workflows/workflowForDevelop.yml
+++ b/.github/workflows/workflowForDevelop.yml
@@ -49,7 +49,7 @@ jobs:
         run: cp ~/.m2/settings.xml ./
 
       - name: Build Docker Image
-        run: docker build -t ghcr.io/sursindmitry/berkut-service:develop-${{ github.sha }}
+        run: docker build -t ghcr.io/sursindmitry/berkut-service:develop-${{ github.sha }} .
 
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.TOKEN_GITHUB }}" | docker login ghcr.io -u ${{ secrets.USERNAME_GITHUB }} --password-stdin
